28) kernel: tcp: tcp_make_synack() consumes dst parameter.<br>
29) kernel: tcp: remove unused tw_cookie_values from tcp_timewait_sock.<br>
30) kernel: tcp: remove TCPCT.<br>
31) kernel: tcp: use TCP_SKB_CB(skb)->tcp_flags in input path.<br>
32) kernel: tcp: use tcp_flags in tcp_data_queue().<br>
33) kernel: tcp: do not copy headers in tcp_collapse().<br>
34) kernel: tcp: remove bad timeout logic in fast recovery.<br>
35) kernel: tcp: be more strict before accepting ECN negociation.<br>
36) kernel: tcp: RFC6298 supersedes RFC2988bis.<br>
37) kernel: tcp: Increase timeout for SYN segments.<br>
38) kernel: tcp: ecn: dont delay ACKS after CE.<br>
39) kernel: tcp: Remove redundant code entering quickack mode.<br>
40) kernel: ipv4: gso: send_check() & segment() cleanups.<br>
41) kernel: ipv6: fix 'inet6_rtm_getroute' to release 'rt->dst' in case of 'alloc_skb' failure.<br>
42) kernel: ipv6: gso: remove redundant locking.<br>
43) kernel: netfilter: cttimeout: fix buffer overflow.<br>
44) kernel: netfilter: nf_conntrack: add nf_ct_timeout_lookup.<br>
<br>
<br>
<b>2.1.x</b><br>
1) uboot: update to last version.<br>
2) reg tool: small fixup.<br>
3) mii tool: fixup and add 7628 support.<br>
4) gpio tool: fix 9532 mode support.<br>
5) nvram lib: do not direct read from flash at show.<br>
6) nvram tool: fix generate wifi config.<br>
7) switch tool: add igmp snooping managment.<br>
8) hw_nat: FoE entry range check, entry valid check.<br>
9) kernel: ralink_spi: add N25Q256A and MT25QL512AB support.<br>
10) kernel: ralink_gpio: switch to schedule_work.<br>
11) kernel: ralink_gpio: fix 9532 mode support.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>