@@ -93,6 +93,7 @@
 #define MTK_ESW_IOCTL_STORM_MULTICAST_UNK	71
 
 #define MTK_ESW_IOCTL_JUMBO_FRAMES		75
+#define MTK_ESW_IOCTL_GREEN_ETHERNET		76
 #define MTK_ESW_IOCTL_IGMP_SNOOPING		78
 #define MTK_ESW_IOCTL_IGMP_RESET		79
 
